[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Score_board.gd" type="Script" id=1]
[ext_resource path="res://PressStart2P-vaV7.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_color = Color( 1, 1, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 2 )

[node name="Score_board" type="Node2D"]
script = ExtResource( 1 )

[node name="label_text_1up" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "1UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_text_high_score" type="Label" parent="."]
margin_left = 56.0
margin_top = 1.0
margin_right = 136.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 2 )
text = "HIGH SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_value_score" type="Label" parent="."]
margin_top = 10.0
margin_right = 40.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "00000"

[node name="label_value_high_score" type="Label" parent="."]
margin_left = 76.6718
margin_top = 10.3283
margin_right = 116.672
margin_bottom = 18.3283
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.37
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
